# pyqt5-rps

./: LICENSE  Makefile  README.md  TODO.md  requirements.txt  setup.cfg
src/pyqt5-rps/: pyqt5-rps.py
src/pyqt5-rps/data/: matches.py
src/pyqt5-rps/resources/ui/: mainwindow.ui
src/pyqt5-rps/ui/: MainWindow.py
