[metadata]
name = pyqt5-rps
version = 0.0.0
license = None
description = Rock Paper Scissors made using Python3 and PyQt5
long_description = file: README.md
author = krazykirby99999
author_email = krazykirby99999@gmail.com
classifiers=
   Programming Language :: Python :: 3
   Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src